--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/header_family.vm
@@ -11,10 +11,12 @@
 			   		<a href="${ufbDomain}/family/setting/account_index.htm" class="c1">${CUSTINFO.invnm}</a></label></span>
 			   		<a href="${ufbDomain}/family/account/logout.htm" class="quit">退出</a>
 				#else
+				   <!--
 				   <div class="b2">
 		               <a href="${ufbDomain}/family/index.htm" class="c1">登录</a>
 		               <a href="${ufbDomain}/family/register_index.htm" class="c1">注册</a>
 				   </div>
+				    -->
 				#end
 			</div>
 		</div>
@@ -24,7 +26,7 @@
 		<div class="nav">
 			<a href="${ufbDomain}/family/uft/uft_index.htm">我的账户</a>
 			<a href="${ufbDomain}/family/ufb/ufb_index.htm">幼富宝</a>
-			<a href="javascript:;">缴费明细</a>
+			<a href="${ufbDomain}/family/uft/pay_records.htm">缴费明细</a>
 			<a href="${ufbDomain}/family/help/aboutuft.htm">帮助中心</a>
 		</div>
     </div>
