--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
@@ -8,23 +8,18 @@
 	    $!{title}
 	#end
 	<link rel="shortcut icon" href="${staticDomain}/favicon.ico" type="image/x-icon">
-	#if(${family_module} == "uft")
-		#if(${family_page} == "pay_result")
-			<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
-	    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
-	    	<link rel="stylesheet" href="${staticDomain}/family/css/family.css">
-	    #else
-			<link rel="stylesheet" href="${staticDomain}/family/css/style.css">
-			<link rel="stylesheet" href="${staticDomain}/family/css/family.css">
-		#end
+	#if(${family_module} == "uft" && ${family_page} != "pay_result")
+		<link rel="stylesheet" href="${staticDomain}/family/css/style.css?t=5">
+		<link rel="stylesheet" href="${staticDomain}/family/css/family.css?t=1">
 	#elseif(${family_module} == "index" || ${family_module} == "account"
 			|| ${family_page} == "ufb_index")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
-		<link rel="stylesheet" href="${staticDomain}/family/css/main.css">
-	#elseif(${family_module} == "ufb" || ${family_module} == "setting" || ${family_module} == "help")
+		<link rel="stylesheet" href="${staticDomain}/family/css/main.css?t=10">
+	#elseif(${family_module} == "ufb" || ${family_module} == "setting" || ${family_module} == "help" || ${family_page} == "pay_result")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
-    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css">
+    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css?t=6">
 	#end
+	<link rel="stylesheet" href="${staticDomain}/family/css/header.css?t=4">
     
 	<script type='text/javascript' src='${staticDomain}/family/libs/jquery.min.js'></script>
 	<script type="text/javascript" src="${staticDomain}/family/libs/jquery.form.js"></script>
