--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/family/setting/password_index.vm
@@ -415,7 +415,7 @@ $(function(){
             <div class="main fr">
                 <div class="setting-content">
                     <div class="tabs password-tabs clearfix">
-                        <a id="tab1" class="btn tab fl" href="javascript:;">修改登录密码</a>
+                        <a id="tab1" class="btn tab fl on" href="javascript:;">修改登录密码</a>
 						<a id="tab2" class="btn tab fl" href="javascript:;">修改交易密码</a>
                         <a id="tab3" class="btn tab fl" href="javascript:;">忘记交易密码</a>
                     </div>
