--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/head_family.vm
@@ -9,17 +9,18 @@
 	#end
 	<link rel="shortcut icon" href="${staticDomain}/favicon.ico" type="image/x-icon">
 	#if(${family_module} == "uft" && ${family_page} != "pay_result")
-		<link rel="stylesheet" href="${staticDomain}/family/css/style.css?t=5">
-		<link rel="stylesheet" href="${staticDomain}/family/css/family.css?t=1">
+		<link rel="stylesheet" href="${staticDomain}/family/css/style.css?t=13">
+		<link rel="stylesheet" href="${staticDomain}/family/css/family.css?t=8">
 	#elseif(${family_module} == "index" || ${family_module} == "account"
 			|| ${family_page} == "ufb_index")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
-		<link rel="stylesheet" href="${staticDomain}/family/css/main.css?t=10">
+		<link rel="stylesheet" href="${staticDomain}/family/css/main.css?t=14">
 	#elseif(${family_module} == "ufb" || ${family_module} == "setting" || ${family_module} == "help" || ${family_page} == "pay_result")
 		<link rel="stylesheet" href="${staticDomain}/family/css/reset.css">
-    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css?t=6">
+    	<link rel="stylesheet" href="${staticDomain}/family/css/common.css?t=14">
 	#end
 	<link rel="stylesheet" href="${staticDomain}/family/css/header.css?t=4">
+	<link rel="stylesheet" href="${staticDomain}/family/css/footer.css?t=1">
     
 	<script type='text/javascript' src='${staticDomain}/family/libs/jquery.min.js'></script>
 	<script type="text/javascript" src="${staticDomain}/family/libs/jquery.form.js"></script>
