--- a/ufb.web/src/main/webapp/static/family/css/common.css
+++ b/ufb.web/src/main/webapp/static/family/css/common.css
@@ -223,7 +223,7 @@ html, body {
 	min-width: 960px;
 }
 body {
-	background-color: #edeaea;
+	background-color: #f3f3f1;
 	color: #808080;
 	font-family: "microsoft yahei";
 }
@@ -1571,6 +1571,10 @@ a.link-underline {
 .center .form-cash {
 	padding-bottom: 100px;
 }
+.recharge {
+	padding-bottom: 100px;
+	padding-left: 230px;
+}
 .center .bill-header {
 	background-color: #ffffff;
 	padding: 15px 0;
@@ -2620,20 +2624,6 @@ a.link-underline {
 }
 .MainFoot dd a:hover{
     color:#fff;
-}
-
-.LowFoot{
-    width:100%;
-    background:#202231;
-    overflow:hidden;
-    border-top:1px solid #65656a;
-}
-.LowFoot .contentFoot{
-    text-align:center;
-    font-size:12px;
-    color:#808080;
-    height:60px;
-    line-height:60px;
 }
 /*common.css中的footer*/
 
