--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/404.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/404.vm
@@ -6,7 +6,7 @@
         <div class="find-panels">
             <div class="panel">
                 <div class="form-done">
-                    <div class="title">很抱歉，您访问的页面不存在，<span id="time">5</span>秒后将自动跳转至首页！</div>
+                    <div class="title">很抱歉，您访问的页面不存在！</div>
                     <a class="btn" href="${ufbDomain}/family/home.htm">
                     	幼富通首页
                     </a>
@@ -22,10 +22,8 @@
 <script type="text/javascript">
 	var time=5;
 	function GoTo(){
-		$('#time').html(time);
 		
 		if(time--==0){
-			$('#time').html("0");
 			window.clearInterval(goToId);
 			window.top.location.href="${ufbDomain}/family/index.htm";
 		}
