--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/error/404.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/error/404.vm
@@ -5,9 +5,9 @@
         </div>
         <div class="find-panels">
             <div class="panel">
-                <div class="form-done">
+                <div class="form-error form-done">
                     <div class="title">很抱歉，您访问的页面不存在！</div>
-                    <a class="btn" href="${ufbDomain}/family/home.htm">
+                    <a class="btn" href="${ufbDomain}/family/index.htm">
                     	幼富通首页
                     </a>
                     <div class="tips">
